--- a/EG/AV3/Robot/.classpath
+++ b/EG/AV3/Robot/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="/Users/rmb/Documents/MEI/EL/PI-EL/PI/lib/antlr-3.4-complete.jar"/>
+	<classpathentry kind="lib" path="C:/Users/António/Documents/Escola/Universidade/4º Ano/EL/antlr-3.4-complete.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
